test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Private_Key/GET_api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Fri, 04 Jul 2025 05:09:36 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="4noqOwb2vHUawu97AwYrBOwOfhzeBopj", algorithm=MD5, qop="auth", stale=false
X-Xgen-Up-Proto: HTTP/2

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}